<resources>
    <string name="app_name">LearnAndroid</string>
    <string name="drawer_opened">Drawerclosed</string>
    <string name="drawer_closed">Drawerclosed</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
<string name="aboutus">Hello guys this is the app Specially for those guys who want to build beautiful apps for this beautiful world.As we all know apps provides us so many beautiful things that we can\'\t explain.So u should know how to create an app and this is the right Platform for building and Learning how to create an app in android.</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
<string name="about2">Created By:\nVikas Bajpayee,Navdeep,Vishal Mishra,Sanat Mishra,Gaurav Sharma,Vipin,Aman,Abhishek,Rahul,Shivi,Rohit Gautam,Sachin\nContact me or Report any Bug here.:-</string>
<string name="banner_ad_unit_id">ca-app-pub-3571509120003278/2811713148</string>
    <string name="url">https://github.com/vikashumain</string>
    <string name="syswindow">

Microsoft® Windows® 7/8/10 (32- or 64-bit)\n
2 GB RAM minimum, 8 GB RAM recommended\n
2 GB of available disk space minimum,\n
4 GB Recommended (500 MB for IDE + 1.5 GB for Android SDK and emulator system image)\n
1280 x 800 minimum screen resolution\n
For accelerated emulator: 64-bit operating system and Intel® processor with support for Intel® VT-x, Intel® EM64T (Intel® 64), and Execute Disable (XD) Bit functionality</string>
<string name="sysmac">Mac® OS X® 10.8.5 or higher, up to 10.11.4 (El Capitan)\n
2 GB RAM minimum, 8 GB RAM recommended\n
2 GB of available disk space minimum,\n
4 GB Recommended (500 MB for IDE + 1.5 GB for Android SDK and emulator system image)\n
1280 x 800 minimum screen resolution</string>
<string name="syslinux">GNOME or KDE desktop\n
Tested on Ubuntu® 12.04, Precise Pangolin (64-bit distribution capable of running 32-bit applications)\n
64-bit distribution capable of running 32-bit applications\n
GNU C Library (glibc) 2.11 or later\n
2 GB RAM minimum, 8 GB RAM recommended\n
2 GB of available disk space minimum,\n
4 GB Recommended (500 MB for IDE + 1.5 GB for Android SDK and emulator system image)\n
1280 x 800 minimum screen resolution\n
For accelerated emulator: Intel® processor with support for Intel® VT-x, Intel® EM64T (Intel® 64), and Execute Disable (XD) Bit functionality, or AMD processor with support for AMD Virtualization™ (AMD-V™)</string>
    <string name="overview">Android is an open-source and Linux based Operating system for mobile devices such as smartphones and tablets.Android offers a unified approach to application development for mobile devices which means developers need only develop for Android, and their applications should be able to run on different devices powered by Android.Android was developed by the Open Handset Alliance, led by Google, and other companies.The first beta version of the Android Software Development Kit (SDK) was released by Google in 2007 where as the first commercial version, Android 1.0, was released in September 2008.</string>
    <string name="feature">1.Beautiful ui\n2.Connectivity=GSM/EDGE, IDEN, CDMA, EV-DO, UMTS, Bluetooth, Wi-Fi, LTE, NFC and WiMAX.\n3.Storage=SQLite, a lightweight relational database, is used for data storage purposes.\n4.Media support=H.263, H.264, MPEG-4 SP, AMR, AMR-WB, AAC, HE-AAC, AAC 5.1, MP3, MIDI, Ogg Vorbis, WAV, JPEG, PNG, GIF, and BMP.5.Multitouch\n6.Multitasking\n7.Resizable widgets=Widgets are resizable, so users can expand them to show more content or shrink them to save space.\n8.GCM=Google Cloud Messaging (GCM) is a service that lets developers send short message data to their users on Android devices, without needing a proprietary sync solution.\n9.Multilanguage=Supports single direction and bi-directional text.</string>
<string name="androappli">Android applications are usually developed in the Java language using the Android Software Development Kit. Once developed, Android applications can be packaged easily and sold out either through a store such as Google Play or the Amazon Appstore. Android powers hundreds of millions of mobile devices in more than 190 countries around the world. It\'\s the largest installed base of any mobile platform and growing fast. Every day more than 1 million new Android devices are activated worldwide.</string>
<string name="environ">You will be glad to know that you can start your Android application development on either of the following operating systems:\n  Microsoft Windows XP or later version.\n  Mac OS X 10.5.8 or later version with Intel chip.\n  Linux including GNU C Library 2.7 or later.</string>
<string name="soft">Following is the list of software\'\s you will need before you start your Android application programming.\n  Java JDK5 or JDK6\n  Android SDK\n  Eclipse IDE for Java Developers (optional)\n  Android Development Tools (ADT) Eclipse Plugin (optional)</string>
<string name="compo">Application components are the essential building blocks of an Android application. These components are loosely coupled by the application manifest file AndroidManifest.xml that describes each component of the application and how they interact. There are following four main components that can be used within an Android application:\n1.Activities\n2.Services\n3.Broadcast Receivers\n4.Content Providers</string>
<string name="activity">They dictate the UI and handle the user interaction to the smartphone screen.An activity represents a single screen with a user interface. For example, an email application might have one activity that shows a list of new emails, another activity to compose an email, and another activity for reading emails. If an application has more than one activity, then one of them should be marked as the activity that is presented when the application is launched.An activity is implemented as a subclass of Activity class as follows:\n <b>public class MainActivity extends Activity</b> \n{\n }\n\nyou have seen in C++/C or in Java languages that program starts from main().Similarly android system initiates its program with in an \'\activity\'\ starting with a call on onCreate() callback a method.there is a sequence of callbacks methods that starts up an activity and a sequence of callbacks methods that tear down an activity.the activity class defines the following callbacks i.e. events.we dont need to implement all these methods.</string>
<string name="services">A service is a component that runs in the background to perform long-running operations. For example, a service might play music in the background while the user is in a different application, or it might fetch data over the network without blocking user interaction with an activity. A service is implemented as a subclass of Service class as follows: \n<b>public class MyService extends Service</b> \n{ \n}</string>
<string name="br">Broadcast Receivers simply respond to broadcast messages from other applications or from the system. For example, applications can also initiate broadcasts to let other applications know that some data has been downloaded to the device and is available for them to use, so this is broadcast receiver who will intercept this communication and will initiate appropriate action. A broadcast receiver is implemented as a subclass of BroadcastReceiver class and each message is broadcasted as an Intent object.\n<b> public class MyReceiver extends BroadcastReceiver</b> \n{\n }</string>
<string name="cp">A content provider component supplies data from one application to others on request. Such requests are handled by the methods of the ContentResolver class. The data may be stored in the file system, the database or somewhere else entirely. A content provider is implemented as a subclass of ContentProvider class and must implement a standard set of APIs that enable other applications to perform transactions.\n<b> public class MyContentProvider extends ContentProvider</b>\n { \n}</string>
    <string name="ac">There are additional components which will be used in the construction of above mentioned entities, their logic, and wiring between them. These components are:\nFragments=fragments are a part of an activity if you want to rotate your activity 360 degree then you can use fragments.\nViews=views are a basic building blocks of an activity.ex buttons,textview,editext etc are views.\nManifest file=It defines the fundamental characteristics of an app.it holds the app icons and app name.it defines each of app components.\nResources\nLayouts\nIntents.</string>
    <string name="abandroid">   Files and Folders Description1.MainActivity.java file=The main activity code is a Java file MainActivity.java. This is the actual application file which ultimately gets converted to a Dalvik executable and runs your application.\n\n2.Manifest file=Whatever component you develop as a part of your application, you must declare all its components in a manifest file called AndroidManifest.xml which resides at the root of the application project directory. This file works as an interface between Android OS and your application, so if you do not declare your component in this file, then it will not be considered by the OS.\n\n3.strings.xml file=The strings.xml file is located in the res/values folder and it contains all the text that your application uses. For example, the names of buttons, labels, default text, and similar types of strings go into this file. This file is responsible for their textual content.\n\n4.R.java file=The gen/com.example.helloworld/R.java file is the glue between the activity Java files likeMainActivity.java and the resources like strings.xml. It is an automatically generated file and you should not modify the content of the R.java file.\n\n5.Layout file=The activity_main.xml is a layout file available in res/layout directory, that is referenced by your application when building its interface. You will modify this file very frequently to change the layout of your application.\n\n6.styles.xml file=A style is defined in an XML resource that is separate from the XML that specifies the layout. This XML file resides under res/values/ directory of your project and will have resources as the root node which is mandatory for the style file. The name of the XML file is arbitrary, but it must use the .xml extension. You can define multiple styles per file using style tag but each style will have its name that uniquely identifies the style. Android style attributes are set using item tag</string>
<string name="hello2">1.src=This contains the .java source files for your project. By default, it includes an MainActivity.javasource file having an activity class that runs when your app is launched using the app icon.The main activity code is a Java file MainActivity.java. This is the actual application file which ultimately gets converted to a Dalvik executable and runs your application.\n\n2.gen=This contains the .R file, a compiler generated file that references all the resources found in your project. You should not modify this file.\n\n3.bin=This folder contains the Android package files .apk built by the ADT during the build process and everything else needed to run an Android application.\n\n4.res/drawable=this contains all icons,images needed for our application of different densities.\n\n4.res/layout=This is a directory for files that define your app\'\s user interface.\n\n5.res/values=This is a directory for other various XML files that contain a collection of resources, such as strings and colors definitions.\n\n6.AndroidManifest.xml=This is the manifest file which describes the fundamental characteristics of the app and defines each of its components.</string>
<string name="envjava">After Installing Java Jdk on your pc.Follow the following steps.Right Click on Mycomputer/ThisPC .Then Click on Advanced system settings.following window will appear</string>
</resources>