<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >
    
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    >

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textStyle="bold|italic"
    android:text="@string/overview"
    android:id="@+id/t1"
    android:textSize="18dp"
    android:textColor="@color/colorAccent"
    />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textStyle="bold"
        android:id="@+id/t2"
        android:text="Features of Android"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="25dp"

        android:layout_below="@+id/t1"
        android:layout_centerHorizontal="true" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold|italic"
        android:id="@+id/t3"
        android:text="@string/feature"
        android:textSize="18dp"
        android:layout_below="@+id/t2"
        android:textColor="@color/colorAccent"

        android:layout_marginTop="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:id="@+id/t4"
        android:text="Android Applications"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:layout_below="@+id/t3"
        android:textColor="@color/colorPrimaryDark"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/t4"
        android:id="@+id/t5"
        android:textSize="18dp"
        android:layout_marginTop="10dp"
        android:text="@string/androappli"
        android:textStyle="bold|italic"
        android:textColor="@color/colorAccent"

        />
    </RelativeLayout>
    </ScrollView>