<?xml version="1.0" encoding="utf-8"?>


<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/environ"
            android:textStyle="bold|italic"
            android:textSize="18dp"
            android:id="@+id/t1"
            android:textColor="@color/colorAccent"
            />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/t1"
        android:id="@+id/t2"
        android:text="@string/soft"
        android:layout_marginTop="10dp"
        android:textSize="18dp"
        android:textStyle="bold|italic"
        android:textColor="@color/colorAccent"
        />
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="Following steps you have to follow for installing Android Studio on Windows:-"
    android:textStyle="bold|italic"
    android:textSize="18dp"
    android:id="@+id/te6"
    android:layout_below="@+id/t2"
    android:layout_marginTop="10dp"
    android:textColor="@color/colorAccent"

    />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="1.Open the .exe file of android Studio that you have installed on your pc."
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:id="@+id/tee"
        android:textSize="18dp"
        android:textColor="@color/colorAccent"

        android:layout_below="@+id/te6"/>
<ImageView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/ime1"
    android:layout_below="@+id/tee"
    android:src="@drawable/article11_1"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="2.Click on Next"
        android:textStyle="bold"
        android:id="@+id/tet"
        android:textSize="18dp"
        android:textColor="@color/colorAccent"

        android:layout_below="@+id/ime1"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ime2"
        android:layout_below="@+id/tet"
        android:src="@drawable/article11_2"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ime4"
        android:layout_below="@+id/ime2"
        android:src="@drawable/article11_4"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ime6"
        android:layout_below="@+id/ime4"
        android:src="@drawable/article11_6"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ime7"
        android:layout_below="@+id/ime6"
        android:src="@drawable/article11_7"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"

        android:text="8.Click on Finish"
        android:textStyle="bold"
        android:id="@+id/tef"
        android:textSize="18dp"
        android:layout_below="@+id/ime7"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ime8"
        android:layout_below="@+id/tef"
        android:src="@drawable/article11_8"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Following Error is Come if you didn't declared JAVA_HOME variable inside environment variables."
        android:id="@+id/tej"
        android:textSize="18dp"
        android:textColor="@color/colorAccent"

        android:layout_below="@+id/ime8"
        android:textStyle="bold"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tej2"
        android:textColor="@color/colorAccent"

        android:textSize="18dp"
        android:layout_below="@+id/tej"
        android:text="So if you didn't install Java jdk ,first install the latest version of it from its official site.Then declared a environment variale."/>
    <TextView
        android:layout_width="wrap_content"
        android:textColor="@color/colorAccent"

        android:layout_height="wrap_content"
        android:text="@string/envjava"
        android:id="@+id/tej4"
        android:textSize="18dp"
        android:layout_below="@+id/tej2"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ime9"
        android:layout_below="@+id/tej4"
        android:src="@drawable/article11_9"/>
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/tej9"
    android:textSize="18dp"
    android:textColor="@color/colorAccent"

    android:layout_below="@+id/ime9"
    android:text="10.Click on Environment Variables"/>
<ImageView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/ime10"
    android:layout_below="@+id/tej9"
    android:src="@drawable/article11_11"/>
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="Enjoy!!! Android studio has been successfully installed on your pc."
    android:textColor="@color/colorAccent"

    android:id="@+id/tee1"
    android:textSize="18dp"
    android:layout_below="@+id/ime10"/>





</RelativeLayout>
    </ScrollView>